<resources>
    <string name="app_name">LoadApp</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <!--Notification -->
    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>
    <string name="notification_action_message">Check the status</string>
    <string name="loadapp_notification_channel_id" translatable="false">loadapp_channel</string>

    <string name="button_name">Click me</string>

    <!-- Url Labels -->
    <string name="glide">Glide - Image Loading Library by BumpTech</string>
    <string name="loadApp">LoadApp - Current repository by Udacity</string>
    <string name="retrofit">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>

    <!-- Button Messages -->
    <string name="no_radio_button_clicked">Please select file to download</string>
    <string name="message_loading">We are loading </string>
    <string name="message_download">Download</string>
    <string name="message_ok">Ok</string>

    <string name="cloud">Image of Arrow Pointing Down</string>
    <string name="radio_buttons">"Radio Buttons Group "</string>

    <!-- Detail Activity Messages -->
    <string name="title_activity_detail">DetailActivity</string>
    <string name="message_success">Success</string>
    <string name="message_failure">Fail</string>
    <string name="label_file_name">File name</string>
    <string name="label_file_status">Status</string>

    <!-- Permission -->
    <string name="write_permission_granted">Write permission was granted. Start Download</string>
    <string name="write_permission_denied">Write permission request was denied</string>
    <string name="write_permission_requested">Permission is not available Requesting Write External Storage permission</string>
    <string name="write_permission_required">Write External Storage permission is require to write files to external storage</string>
    <string name="write_permission_not_available">Write External Storage Permission not avaliable. Requesting write external storage permission</string>


</resources>
